--- a/fragment/gallery.html
+++ b/fragment/gallery.html
@@ -37,6 +37,9 @@
       <li class="nav-item" id="contact">
         <a class="nav-link" href="./contact.html">Contact</a>
       </li>
+      <li class="nav-item" id="weather">
+        <a class="nav-link" href="./weather.html">Contact</a>
+      </li>
     </ul>
   </div>
 </nav>
