--- a/fragment/index.html
+++ b/fragment/index.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="./contact.html">Contact</a>
       </li>
       <li class="nav-item" id="weather">
-        <a class="nav-link" href="./weather.html">Contact</a>
+        <a class="nav-link" href="./weather.html">Weather</a>
       </li>
     </ul>
   </div>
