--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item" id="carte">
-        <a class="nav-link" href="./Carte.html">Menu</a>
+        <a class="nav-link" href="./fragments/Carte.html">Menu</a>
       </li>
       <li class="nav-item" id="gallery">
-        <a class="nav-link" href="./gallery.html">Gallery</a>
+        <a class="nav-link" href="./fragments/gallery.html">Gallery</a>
       </li>
       <li class="nav-item" id="restaurant">
-        <a class="nav-link" href="./restaurant.html">Restaurant</a>
+        <a class="nav-link" href="./fragments/restaurant.html">Restaurant</a>
       </li>
       <li class="nav-item" id="contact">
-        <a class="nav-link" href="./contact.html">Contact</a>
+        <a class="nav-link" href="./fragments/contact.html">Contact</a>
       </li>
       <li class="nav-item" id="weather">
-        <a class="nav-link" href="./weather.html">Weather</a>
+        <a class="nav-link" href="./fragments/weather.html">Weather</a>
       </li>
     </ul>
   </div>
