--- a/fragment/Carte.html
+++ b/fragment/Carte.html
@@ -24,7 +24,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item" id="home">
-        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="../index.html">Home</a>
       </li>
       <li class="nav-item active" id="carte">
         <a class="nav-link" href="./Carte.html">Menu</a>
