--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="Description" content="Site de restaurant">
   <meta name="theme-color" content="#317EFB"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/style/style.css">
-  <link rel="manifest" href="../manifest.json">
+  <link rel="stylesheet" href="./assets/style/style.css">
+  <link rel="manifest" href="./manifest.json">
   <title>Franchise Restaurant</title>
 </head>
 <body class="bg-creme">
