--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
 
   <!-- Toggler/collapsibe Button -->
-  <button aria-label="menu" name="menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button aria-label="menu" name="menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
   <!-- Navbar links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item active" id="home">
         <a class="nav-link" href="./index.html">Home</a>
@@ -43,80 +43,82 @@
       </li>
     </ul>
   </div>
-</nav>
+  </nav>
 
-<div class="jumbotron jumbotron-fluid mt-5" id="imageTest">
-  <div class="row">
-    <div class="col-4 offset-4"><div class="card">
-      <div class="card-body bg-warning">
-        <div class="text-center h1">
-          L'étoile
+  <div class="jumbotron jumbotron-fluid mt-5" id="imageTest">
+    <div class="container">
+      <div class="row">
+        <div class="col-4 offset-4">
+          <div class="card">
+            <div class="card-body bg-warning">
+              <div class="text-center h1">
+                L'étoile
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div></div>
-  </div>
-</div>
-<main>
-  <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-header bg-wood">
-              <h3>Opening of a new restaurant in Brussels</h3>
-            </div>
-            <div class="card-body">
-              A new restaurant in our franchise opened this weekend at Brussels.
-              Helmed by the renowned chef Arthur Dent this restaurant will offer all the
-              services that our clientele has grown used to in the comfort of the
-              capital.
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header bg-wood">
-              <h3>New dish</h3>
-            </div>
-            <div class="card-body">
-              To celebrate the opening of our new restaurant in Brussels, a brand new
-              dish is being introduced. The dish, composed of delicately cooked shrimp in
-              a soft miso flavoured sauce accompanying freshly baked noodles will
-              naturally evoke the subtle fragrance of the orient.
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header bg-wood">
-              <h3>Lorem ipsum</h3>
-            </div>
-            <div class="card-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula sem ac
-              ultricies iaculis. Vestibulum condimentum velit ut dapibus tincidunt. In hac
-              habitasse platea dictumst. Nulla placerat gravida sagittis. Nullam posuere
-              malesuada nunc et interdum. Vestibulum varius dui lacus, quis tristique sapien
-              consequat vel. Quisque fermentum ex et bibendum cursus. Proin eu suscipit
-              nunc.
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-header bg-wood">
-              <h3>Promotions</h3>
-            </div>
-            <div class="card-body">
-              <p>10% discount to the first 100 clients to visit our new restaurant in Brussels</p>
-              <p>Half price on the wine selection this weekend</p>
-              <p>another promotion for which I cannot think of a content right renowned</p>
-              <p>And a fourth one for good measure</p>
-            </div>
-          </div>
-        </div>
-
     </div>
   </div>
-</main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src="./assets/script/script.js"></script>
-
+  <!-- <main>
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-header bg-wood">
+                <h3>Opening of a new restaurant in Brussels</h3>
+              </div>
+              <div class="card-body">
+                A new restaurant in our franchise opened this weekend at Brussels.
+                Helmed by the renowned chef Arthur Dent this restaurant will offer all the
+                services that our clientele has grown used to in the comfort of the
+                capital.
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header bg-wood">
+                <h3>New dish</h3>
+              </div>
+              <div class="card-body">
+                To celebrate the opening of our new restaurant in Brussels, a brand new
+                dish is being introduced. The dish, composed of delicately cooked shrimp in
+                a soft miso flavoured sauce accompanying freshly baked noodles will
+                naturally evoke the subtle fragrance of the orient.
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header bg-wood">
+                <h3>Lorem ipsum</h3>
+              </div>
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula sem ac
+                ultricies iaculis. Vestibulum condimentum velit ut dapibus tincidunt. In hac
+                habitasse platea dictumst. Nulla placerat gravida sagittis. Nullam posuere
+                malesuada nunc et interdum. Vestibulum varius dui lacus, quis tristique sapien
+                consequat vel. Quisque fermentum ex et bibendum cursus. Proin eu suscipit
+                nunc.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-header bg-wood">
+                <h3>Promotions</h3>
+              </div>
+              <div class="card-body">
+                <p>10% discount to the first 100 clients to visit our new restaurant in Brussels</p>
+                <p>Half price on the wine selection this weekend</p>
+                <p>another promotion for which I cannot think of a content right renowned</p>
+                <p>And a fourth one for good measure</p>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </main> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <script src="./assets/script/script.js"></script>
 </body>
 </html>
