--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <!-- <main>
+  <main>
     <div class="container-fluid">
       <div class="row">
           <div class="col-md-6">
@@ -69,10 +69,10 @@
                 <h3>Opening of a new restaurant in Brussels</h3>
               </div>
               <div class="card-body">
-                A new restaurant in our franchise opened this weekend at Brussels.
+                <p>A new restaurant in our franchise opened this weekend at Brussels.
                 Helmed by the renowned chef Arthur Dent this restaurant will offer all the
                 services that our clientele has grown used to in the comfort of the
-                capital.
+                capital.</p>
               </div>
             </div>
             <div class="card">
@@ -80,10 +80,10 @@
                 <h3>New dish</h3>
               </div>
               <div class="card-body">
-                To celebrate the opening of our new restaurant in Brussels, a brand new
+                <p>To celebrate the opening of our new restaurant in Brussels, a brand new
                 dish is being introduced. The dish, composed of delicately cooked shrimp in
                 a soft miso flavoured sauce accompanying freshly baked noodles will
-                naturally evoke the subtle fragrance of the orient.
+                naturally evoke the subtle fragrance of the orient.</p>
               </div>
             </div>
             <div class="card">
@@ -91,16 +91,16 @@
                 <h3>Lorem ipsum</h3>
               </div>
               <div class="card-body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula sem ac
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula sem ac
                 ultricies iaculis. Vestibulum condimentum velit ut dapibus tincidunt. In hac
                 habitasse platea dictumst. Nulla placerat gravida sagittis. Nullam posuere
                 malesuada nunc et interdum. Vestibulum varius dui lacus, quis tristique sapien
                 consequat vel. Quisque fermentum ex et bibendum cursus. Proin eu suscipit
-                nunc.
+                nunc.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <div class="card">
               <div class="card-header bg-wood">
                 <h3>Promotions</h3>
@@ -112,10 +112,10 @@
                 <p>And a fourth one for good measure</p>
               </div>
             </div>
-          </div>
+          </div> -->
       </div>
     </div>
-  </main> -->
+  </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
