--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-6">
+          <div class="col-md-6">
             <div class="card">
               <div class="card-header bg-wood">
                 <h3>Promotions</h3>
@@ -112,7 +112,7 @@
                 <p>And a fourth one for good measure</p>
               </div>
             </div>
-          </div> -->
+          </div>
       </div>
     </div>
   </main>
